--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.3.0",
     "mongoose": "^5.3.8",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "uuid": "^3.3.2"
   }
 }
